toList instead of Collectors.toList