@@ -3,12 +3,13 @@ package com.egalaber.buildbro.core.service;
 import com.egalaber.buildbro.api.model.ISearchData;
 import com.egalaber.buildbro.core.domain.Branch;
 import com.egalaber.buildbro.core.domain.Project;
-import com.egalaber.buildbro.core.repository.*;
+import com.egalaber.buildbro.core.repository.BuildLabelRepository;
+import com.egalaber.buildbro.core.repository.ProjectRepository;
+import com.egalaber.buildbro.core.repository.ProjectSpecs;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -24,15 +25,14 @@ public class SearchDataService {
     public ISearchData searchData() {
         final ISearchData searchData = new ISearchData();
         List<Project> allProjects = projectRepository.findAll(ProjectSpecs.allProjects(false));
-        searchData.getProjectNames().addAll(allProjects.stream().map(Project::getName).collect(Collectors.toList()));
+        searchData.getProjectNames().addAll(allProjects.stream().map(Project::getName).toList());
         allProjects
                 .forEach(project -> searchData.getProjectBranches().put(
                         project.getName(),
                         project.getBranches().stream()
                                 .map(Branch::getName)
-                                .collect(Collectors.toList()
-                                ))
-                );
+                                .toList()
+                ));
         searchData.getLabelKeys().addAll(buildLabelRepository.distinctLabelKeys());
         return searchData;
     }
